# dynamic-gap

./: LICENSE  README.md  dynamic-gap.cabal  stack.yaml
src/: Main.hs
