name:                dynamic-gap
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/satchelbaldwinschool/dynamic-gap#readme
license:             BSD3
license-file:        LICENSE
author:              Satchel Baldwin
maintainer:          satchelbaldwinschool@gmail.com
copyright:           2017 Satchel Baldwin
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dynamic-gap
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, process, silently, parallel, ReadArgs
